style: fix spacing confirm button

--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -224,8 +224,8 @@
 }
 
 .ui-datatable-contextmenu-item {
-    height: 42px;
-    line-height: 42px;
+    height: 29px;
+    line-height: 29px;
     padding: 0 10px;
     /* border-bottom: 1px solid #efefef; */
     width: 100%;
